--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a href="sites/descargas.php">Descargas</a>
     </nav>
     <main>
-        <p>Esta es la página principal de nuestro servidor. Desde aquí puedes acceder a las diferentes funcionalidades:</p>
+        <p>Esta es la página principal de mi servidor. Desde aquí puedes acceder a las diferentes funcionalidades:</p>
     </main>
     <footer>
         <p>&copy; 2024 Mi Servidor Web. Todos los derechos reservados.</p>
