--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a href="sites/admin.php">Administración</a>
         <a href="sites/status.php">Estado del Servidor</a>
         <a href="sites/descargas.php">Descargas</a>
-        <a href="sites/shortener.html">Acortador de urls</a>
+        <a href="sites/shortener/shortener.html">Acortador de urls</a>
     </nav>
     <main>
         <p>Esta es la página principal de mi servidor. Desde aquí puedes acceder a las diferentes funcionalidades:</p>
